<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/options_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_colors_note"
    android:orientation="vertical"
    app:behavior_peekHeight="25dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/options_menu_handle"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/more_options"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/uploadVideo"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_upload_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:text="@string/upload_video"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/aboutUs"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_info_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:text="About WeSignal"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>